fixes the small white line hiding behind nav bars and adds ids to sections so nav links can work

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -20,7 +20,7 @@ body {
     "employees"
     "footer";
   grid-template-columns: 100%;
-  grid-template-rows: auto 100vh 45vh 40vh 110vh 100vh 100vh;
+  grid-template-rows: 0vh 100vh 45vh 40vh 110vh 100vh 100vh;
   height: 100%;
   margin: 0;
   min-width: 100%;
